--- a/AppointmentsSystem/AppointmentsSystem.csproj
+++ b/AppointmentsSystem/AppointmentsSystem.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
